[tool.poetry]
name = "ghosttuner"
version = "0.1.0"
description = "Leverage LLMs for hyperparameter tuning"
authors = ["Tyler Romero <tyler.alexander.romero@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<=3.10"
optuna = "^3.4.0"
openai = "^1.3.8"
oslo-concurrency = "^5.2.0"
openml = "0.10.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
plotly = "^5.18.0"
hpobench = { git = "https://github.com/automl/HPOBench.git", branch = "master" }
xgboost = "^2.0.2"
pyarrow = "^14.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
